--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Aplicação web para o IPT",
   "main": "/backend/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/backend/app.js"
   },
   "repository": {
     "type": "git",
